--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,15 @@
-'singer-python>=5.0.12'
-'requests>=2.21.0'
-'jsonschema>=2.6.0,<3.0a'
+backoff==1.8.0
+certifi==2019.11.28
+chardet==3.0.4
+ciso8601==2.1.3
+idna==2.9
+jsonschema==2.6.0
+pkg-resources==0.0.0
+python-dateutil==2.8.1
+pytz==2018.4
+requests==2.23.0
+simplejson==3.11.1
+singer-python==5.9.0
+six==1.14.0
+-e git+https://github.com/typo-ai/target-typo@cabec66f693446494a81df24045622e21fe32a2a#egg=target_typo
+urllib3==1.25.8
